Созданы endpoints в proto для сертификатов
On branch certificate
Changes to be committed:
modified:   pkg/api/api.pb.go
modified:   pkg/api/api.pb.gw.go
modified:   pkg/api/api_grpc.pb.go
new file:   pkg/api/certificate/certificate.pb.go
modified:   proto/api.proto
new file:   proto/certificate/certificate.proto
modified:   swagger/api/api.swagger.json
new file:   swagger/api/certificate/certificate.swagger.json
